--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeviceDetailActivity"></activity>
-        <activity android:name=".ListActivity" />
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".DeviceDetailActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.DEVICEDETAIL" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ListActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.LIST" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
